# Calculator-CppQt

./: .gitignore  CGPT  CMakeCache.txt  CMakeLists.txt  Makefile  QtCLionProject  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_mainwindow.cpp_parameters
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
